--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\NavigateCommands\" />
-    <Folder Include="Commands\DrawerCommands\" />
+    <Folder Include="Commands\Drawers\CreateNewDrawerCommands\" />
+    <Folder Include="Commands\Navigation\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Services\" />
   </ItemGroup>
